--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="es">
 <head>
@@ -226,9 +225,6 @@
 (function(){
   function $(id){ return document.getElementById(id); }
 
-  // 🔑 Cargar la key en memoria al iniciar
-  window.__GKEY__ = window.__GKEY__ || localStorage.getItem('gkey') || null;
-
   /* ========= MODALES ========= */
 
   function openModal(){
@@ -306,7 +302,7 @@
             parts:[{ text: 'Hola' }]
           }]
         };
-        // 👉 usamos el mismo endpoint que el OCR real (v1, gemini-2.0-flash)
+        // usamos el mismo endpoint que el OCR real (v1, gemini-2.0-flash)
         var res = await fetch(
           'https://generativelanguage.googleapis.com/v1/models/gemini-2.0-flash:generateContent?key='+encodeURIComponent(key),
           {
@@ -318,6 +314,7 @@
 
         if (!res.ok){
           if (res.status === 404){
+            // API rara, pero guardamos la clave igualmente
             window.__GKEY__ = key;
             localStorage.setItem('gkey', key);
             $('ocrStatus').textContent =
@@ -499,7 +496,7 @@
         }]
       };
 
-      // 👉 Usamos el endpoint v1, modelo gemini-2.0-flash, como el código que te funcionaba
+      // Endpoint estable v1 + gemini-2.0-flash
       var res  = await fetch(
         'https://generativelanguage.googleapis.com/v1/models/gemini-2.0-flash:generateContent?key='+encodeURIComponent(key),
         {
@@ -525,7 +522,7 @@
           ? data.candidates[0].content.parts[0].text
           : "";
 
-      var parsed = parseOcrText(text);
+      var parsed = parseOcrText(text || "");
 
       if (parsed.provider) $('revProvider').value = parsed.provider;
       if (parsed.date)     $('revDate').value     = parsed.date;
@@ -661,8 +658,8 @@
     }
   }
 
-  document.addEventListener('auth-changed',    renderList, false);
-  document.addEventListener('entries-updated', renderList, false);
+  document.addEventListener('auth-changed',     renderList, false);
+  document.addEventListener('entries-updated',  renderList, false);
   renderList();
 })();
 </script>
