--- a/index.html
+++ b/index.html
@@ -225,6 +225,9 @@
 (function(){
   function $(id){ return document.getElementById(id); }
 
+  // Cargar key si ya estaba guardada
+  window.__GKEY__ = window.__GKEY__ || localStorage.getItem('gkey') || null;
+
   /* ========= MODALES ========= */
 
   function openModal(){
@@ -299,30 +302,30 @@
         var body = {
           contents: [{
             role: 'user',
-            parts:[{ text: 'Hola' }]
+            parts:[{ text: 'Hola, responde con un OK.' }]
           }]
         };
-        // usamos el mismo endpoint que el OCR real (v1, gemini-2.0-flash)
-        var res = await fetch(
-          'https://generativelanguage.googleapis.com/v1/models/gemini-2.0-flash:generateContent?key='+encodeURIComponent(key),
-          {
+
+        // probamos primero 2.5, luego 2.0
+        var modelos = ['gemini-2.5-flash','gemini-2.0-flash'];
+        var ok = false;
+
+        for (var i=0;i<modelos.length && !ok;i++){
+          var url = 'https://generativelanguage.googleapis.com/v1/models/' +
+                    modelos[i] + ':generateContent?key=' + encodeURIComponent(key);
+          var res = await fetch(url, {
             method:'POST',
             headers:{'Content-Type':'application/json'},
             body:JSON.stringify(body)
+          });
+          if (res.ok){
+            ok = true;
+            break;
           }
-        );
+        }
 
-        if (!res.ok){
-          if (res.status === 404){
-            // API rara, pero guardamos la clave igualmente
-            window.__GKEY__ = key;
-            localStorage.setItem('gkey', key);
-            $('ocrStatus').textContent =
-              'No he podido verificar la clave (HTTP 404), pero la he guardado. Prueba a escanear un ticket ✅';
-          } else {
-            $('ocrStatus').textContent =
-              'Error al probar la clave: HTTP '+res.status;
-          }
+        if (!ok){
+          $('ocrStatus').textContent = 'Error al probar la clave (ningún modelo respondió OK).';
           return;
         }
 
@@ -401,8 +404,7 @@
   function parseOcrText(text){
     var out = { provider:null, date:null, amount:null, category:null };
 
-    // Intentar JSON directo
-    var jsonMatch = text.match(/\{[\s\S]*\}/);
+    var jsonMatch = text && text.match && text.match(/\{[\s\S]*\}/);
     if (jsonMatch){
       try{
         var obj = JSON.parse(jsonMatch[0]);
@@ -413,7 +415,6 @@
       }catch(e){}
     }
 
-    // Fallbacks (por si Gemini devuelve texto suelto)
     if (!out.provider){
       var mProv = text.match(/(?:provider|proveedor)\s*[:=]\s*"?([^\n"]+)/i);
       if (!mProv) mProv = text.match(/^[A-ZÁÉÍÓÚÑ0-9][^\n]{3,30}$/m);
@@ -490,39 +491,57 @@
         contents: [{
           role : 'user',
           parts: [
-            { text: 'Extrae proveedor, fecha (YYYY-MM-DD), categoría (comida, peajes, gasolina, transporte, alojamiento, ocio, servicios, varios o ingreso) e importe total EUR. Devuelve JSON con provider,date,category,amount.' },
+            { text:
+`Extrae proveedor, fecha (YYYY-MM-DD), categoría (comida, peajes, gasolina,
+transporte, alojamiento, ocio, servicios, varios o ingreso) e importe total en EUR.
+Devuelve SOLO un JSON válido con estas claves:
+{"provider":"...", "date":"YYYY-MM-DD", "category":"...", "amount":0.00}` },
             { inlineData: { mimeType:'image/jpeg', data:b64 } }
           ]
         }]
       };
 
-      // Endpoint estable v1 + gemini-2.0-flash
-      var res  = await fetch(
-        'https://generativelanguage.googleapis.com/v1/models/gemini-2.0-flash:generateContent?key='+encodeURIComponent(key),
-        {
-          method :'POST',
-          headers:{ 'Content-Type':'application/json' },
-          body   : JSON.stringify(body)
-        }
-      );
+      var modelos = ['gemini-2.5-flash','gemini-2.0-flash'];
+      var text = '';
 
-      if (!res.ok){
-        console.warn('OCR error HTTP', res.status);
+      for (var i=0;i<modelos.length && !text;i++){
+        var model = modelos[i];
+        try{
+          var url = 'https://generativelanguage.googleapis.com/v1/models/' +
+                    model + ':generateContent?key=' + encodeURIComponent(key);
+
+          var res  = await fetch(url, {
+            method :'POST',
+            headers:{ 'Content-Type':'application/json' },
+            body   : JSON.stringify(body)
+          });
+
+          if (!res.ok){
+            console.warn('OCR HTTP error', res.status, 'modelo', model);
+            continue;
+          }
+
+          var data = await res.json();
+          if (data &&
+              data.candidates &&
+              data.candidates[0] &&
+              data.candidates[0].content &&
+              data.candidates[0].content.parts){
+            text = data.candidates[0].content.parts
+              .map(function(p){ return p.text || ''; })
+              .join('\n');
+          }
+        }catch(eInner){
+          console.warn('Error llamando a modelo', model, eInner);
+        }
+      }
+
+      if (!text){
+        console.warn('OCR: ningún modelo devolvió texto');
         return;
       }
 
-      var data = await res.json();
-      var text =
-        data &&
-        data.candidates &&
-        data.candidates[0] &&
-        data.candidates[0].content &&
-        data.candidates[0].content.parts &&
-        data.candidates[0].content.parts[0].text
-          ? data.candidates[0].content.parts[0].text
-          : "";
-
-      var parsed = parseOcrText(text || "");
+      var parsed = parseOcrText(text);
 
       if (parsed.provider) $('revProvider').value = parsed.provider;
       if (parsed.date)     $('revDate').value     = parsed.date;
@@ -658,8 +677,8 @@
     }
   }
 
-  document.addEventListener('auth-changed',     renderList, false);
-  document.addEventListener('entries-updated',  renderList, false);
+  document.addEventListener('auth-changed',    renderList, false);
+  document.addEventListener('entries-updated', renderList, false);
   renderList();
 })();
 </script>
