--- a/index.html
+++ b/index.html
@@ -302,33 +302,21 @@
         var body = {
           contents: [{
             role: 'user',
-            parts:[{ text: 'Hola, responde con un OK.' }]
+            parts:[{ text: 'Hola' }]
           }]
         };
-
-        // probamos primero 2.5, luego 2.0
-        var modelos = ['gemini-2.5-flash','gemini-2.0-flash'];
-        var ok = false;
-
-        for (var i=0;i<modelos.length && !ok;i++){
-          var url = 'https://generativelanguage.googleapis.com/v1/models/' +
-                    modelos[i] + ':generateContent?key=' + encodeURIComponent(key);
-          var res = await fetch(url, {
+        var res = await fetch(
+          'https://generativelanguage.googleapis.com/v1/models/gemini-2.0-flash:generateContent?key='+encodeURIComponent(key),
+          {
             method:'POST',
             headers:{'Content-Type':'application/json'},
             body:JSON.stringify(body)
-          });
-          if (res.ok){
-            ok = true;
-            break;
           }
-        }
-
-        if (!ok){
-          $('ocrStatus').textContent = 'Error al probar la clave (ningún modelo respondió OK).';
+        );
+        if (!res.ok){
+          $('ocrStatus').textContent = 'Error al probar la clave: HTTP '+res.status;
           return;
         }
-
         window.__GKEY__ = key;
         localStorage.setItem('gkey', key);
         $('ocrStatus').textContent = 'Clave válida y guardada ✅';
@@ -491,55 +479,36 @@
         contents: [{
           role : 'user',
           parts: [
-            { text:
-`Extrae proveedor, fecha (YYYY-MM-DD), categoría (comida, peajes, gasolina,
-transporte, alojamiento, ocio, servicios, varios o ingreso) e importe total en EUR.
-Devuelve SOLO un JSON válido con estas claves:
-{"provider":"...", "date":"YYYY-MM-DD", "category":"...", "amount":0.00}` },
+            { text: 'Extrae proveedor, fecha (YYYY-MM-DD), categoría (comida, peajes, gasolina, transporte, alojamiento, ocio, servicios, varios o ingreso) e importe total EUR. Devuelve JSON con provider,date,category,amount.' },
             { inlineData: { mimeType:'image/jpeg', data:b64 } }
           ]
         }]
       };
 
-      var modelos = ['gemini-2.5-flash','gemini-2.0-flash'];
-      var text = '';
-
-      for (var i=0;i<modelos.length && !text;i++){
-        var model = modelos[i];
-        try{
-          var url = 'https://generativelanguage.googleapis.com/v1/models/' +
-                    model + ':generateContent?key=' + encodeURIComponent(key);
-
-          var res  = await fetch(url, {
-            method :'POST',
-            headers:{ 'Content-Type':'application/json' },
-            body   : JSON.stringify(body)
-          });
-
-          if (!res.ok){
-            console.warn('OCR HTTP error', res.status, 'modelo', model);
-            continue;
-          }
-
-          var data = await res.json();
-          if (data &&
-              data.candidates &&
-              data.candidates[0] &&
-              data.candidates[0].content &&
-              data.candidates[0].content.parts){
-            text = data.candidates[0].content.parts
-              .map(function(p){ return p.text || ''; })
-              .join('\n');
-          }
-        }catch(eInner){
-          console.warn('Error llamando a modelo', model, eInner);
+      var res  = await fetch(
+        'https://generativelanguage.googleapis.com/v1/models/gemini-2.0-flash:generateContent?key='+encodeURIComponent(key),
+        {
+          method :'POST',
+          headers:{ 'Content-Type':'application/json' },
+          body   : JSON.stringify(body)
         }
-      }
+      );
 
-      if (!text){
-        console.warn('OCR: ningún modelo devolvió texto');
+      if (!res.ok){
+        console.warn('OCR HTTP error', res.status);
         return;
       }
+
+      var data = await res.json();
+      var text =
+        data &&
+        data.candidates &&
+        data.candidates[0] &&
+        data.candidates[0].content &&
+        data.candidates[0].content.parts &&
+        data.candidates[0].content.parts[0].text
+          ? data.candidates[0].content.parts[0].text
+          : "";
 
       var parsed = parseOcrText(text);
 
