--- a/export.html
+++ b/export.html
@@ -20,76 +20,64 @@
   <script src="config.js"></script>
 
   <style>
-    .entry-row {
-      display:flex;
-      justify-content:space-between;
-      align-items:flex-start;
-      padding:6px 8px;
-      border-radius:8px;
-      margin-bottom:4px;
-      background:rgba(0,0,0,0.08);
-    }
-    .entry-main {
-      display:flex;
-      flex-direction:column;
-      gap:2px;
-      font-size:12px;
-    }
-    .entry-main strong {
-      font-size:12px;
-    }
+    /* Solo estética específica Export (mantiene funcionalidad) */
+
+    /* Cards de entrada: se apoya en .entry-row del CSS global, aquí solo afinamos */
     .entry-meta {
-      font-size:11px;
-      opacity:0.8;
+      font-size: 12px;
+      color: var(--text-muted);
+      margin-top: 2px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
-    .entry-amount {
-      font-weight:600;
-      font-size:12px;
-      white-space:nowrap;
-      margin-left:8px;
+
+    /* Botón borrar en móvil: más grande y fácil */
+    .btnIconDel{
+      min-height: 34px;
+      padding: 6px 10px;
+      border-radius: 14px;
+      font-weight: 800;
     }
-    .entry-actions {
+
+    /* “Pills” más visibles en móvil */
+    .totals-wrap{
       display:flex;
-      flex-direction:column;
-      align-items:flex-end;
-      gap:4px;
-      margin-left:8px;
-    }
-    .pill {
-      display:inline-flex;
+      gap:10px;
+      flex-wrap:wrap;
+      margin-top:12px;
       align-items:center;
-      padding:2px 6px;
-      border-radius:999px;
-      font-size:10px;
-      border:1px solid rgba(255,255,255,0.2);
-      gap:4px;
     }
-    /* Total gastos más grande y protagonista (pensado para móvil) */
-    .pill-total {
-      font-size:16px;
-      padding:8px 14px;
-      border-width:2px;
-      flex:1 1 100%;
-      justify-content:space-between;
+
+    /* Total protagonista */
+    .pill-total{
+      flex: 1 1 280px;
+      justify-content: space-between;
     }
-    .pill-total span {
-      font-size:18px;
+
+    /* Forzar lectura cómoda */
+    #entriesList{
+      max-height: 360px;
+      overflow: auto;
     }
-    @media (max-width:600px){
-      .pill-total {
-        font-size:18px;
+
+    @media (max-width: 600px){
+      #entriesList{
+        max-height: none;
       }
-      .pill-total span {
-        font-size:20px;
+      .btnIconDel{
+        min-height: 44px;
+        font-size: 16px;
+        padding: 10px 14px;
       }
     }
   </style>
 </head>
-<body>
 
+<body>
 <header class="topbar">
   <h1>
-    <img src="assets/2n-logo-black.png" alt="2N" style="height:20px;border-radius:4px;">
+    <img src="assets/2n-logo-black.png" alt="2N" style="height:20px;border-radius:6px;">
     Gastos 2N · Export
   </h1>
 
@@ -111,55 +99,61 @@
     <!-- FILTROS + TOTALES -->
     <div class="card">
       <h2>Exportar por mes</h2>
+
       <div class="row" style="gap:12px;flex-wrap:wrap;align-items:flex-end">
-        <div>
+        <div style="min-width:180px">
           <label>Mes</label><br>
-          <input id="monthInput" type="month" style="min-width:140px">
+          <input id="monthInput" type="month" style="min-width:170px">
         </div>
+
         <div class="small">
-          Se exportan los gastos y KM correspondientes al mes seleccionado.<br>
-          Usa el listado para revisar y borrar apuntes antes de exportar.
+          Se exportan los gastos y KM del mes seleccionado.<br>
+          Revisa y borra apuntes antes de exportar.
         </div>
       </div>
 
-      <div class="row" style="margin-top:12px;gap:12px;flex-wrap:wrap">
-        <!-- TOTAL GASTOS MUCHO MÁS GRANDE -->
-        <div class="pill pill-total">
-          💶 Total gastos mes:
-          <span id="totGastos" style="font-weight:700;margin-left:4px">0,00 €</span>
+      <div class="totals-wrap">
+        <div class="pill-total">
+          💶 Total mes
+          <span id="totGastos">0,00 €</span>
         </div>
+
         <div class="pill">
-          🧾 Pagado con mi dinero:
-          <span id="totPersonalPaid" style="font-weight:600;margin-left:4px">0,00 €</span>
+          🧾 Pagado con mi dinero
+          <span id="totPersonalPaid" style="font-weight:700;margin-left:4px">0,00 €</span>
         </div>
+
         <div class="pill">
-          🧍 KM personales:
-          <span id="totKmPer" style="font-weight:600;margin-left:4px">0,0 km</span>
+          🧍 KM personales
+          <span id="totKmPer" style="font-weight:700;margin-left:4px">0,0 km</span>
         </div>
       </div>
     </div>
 
-    <!-- LISTADO CON BOTÓN BORRAR -->
+    <!-- LISTADO -->
     <div class="card">
       <h2>Registros del mes</h2>
-      <div id="entriesList" class="list small" style="max-height:320px;overflow:auto;"></div>
-      <div id="exportStatus" class="small" style="margin-top:6px;min-height:1.5em;"></div>
+      <div id="entriesList" class="list"></div>
+      <div id="exportStatus" class="small" style="margin-top:8px;min-height:1.5em;"></div>
     </div>
 
-    <!-- ACCIONES EXPORT -->
+    <!-- ACCIONES -->
     <div class="card">
       <h2>Acciones de exportación</h2>
+
       <div class="row" style="gap:10px;flex-wrap:wrap">
-        <button id="btnExcelGastos" class="btn primary">📊 Descargar Excel gastos (plantilla 2N)</button>
+        <button id="btnExcelGastos" class="btn primary">📊 Descargar Excel gastos (2N template)</button>
       </div>
-      <div class="row" style="gap:10px;flex-wrap:wrap;margin-top:8px">
+
+      <div class="row" style="gap:10px;flex-wrap:wrap;margin-top:10px">
         <button id="btnExcelKmPersonal" class="btn">🚗 Descargar Excel KM personales</button>
         <button id="btnFotosTickets" class="btn">🖼 Descargar fotos tickets</button>
       </div>
-      <div class="small" style="margin-top:8px">
-        • El Excel de gastos usa la plantilla <b>assets/plantilla-2n.xlsx</b> y rellena las líneas desde la fila 7.<br>
-        • El Excel de KM personales incluye km, precio €/L y coste calculado (km × €/L × 6L/100km).<br>
-        • El botón de fotos lanza la descarga de todas las imágenes de tickets del mes (una por fichero).
+
+      <div class="small" style="margin-top:10px">
+        • El Excel de gastos usa <b>assets/plantilla-2n.xlsx</b> y rellena líneas desde la fila 7.<br>
+        • El Excel de KM personales incluye km, €/L y coste calculado (km × €/L × 6L/100km).<br>
+        • Las fotos se descargan una a una (el navegador puede pedir confirmación).
       </div>
     </div>
 
@@ -368,9 +362,9 @@
       }
     });
 
-    $('totGastos').textContent      = formatEuro(tot);
-    $('totPersonalPaid').textContent= formatEuro(totPersonal);
-    $('totKmPer').textContent       = formatKm(kmPer);
+    $('totGastos').textContent       = formatEuro(tot);
+    $('totPersonalPaid').textContent = formatEuro(totPersonal);
+    $('totKmPer').textContent        = formatKm(kmPer);
   }
 
   function renderEntriesList(entries){
@@ -416,9 +410,10 @@
       amt.textContent = formatEuro(Number(e.amount || 0));
 
       const btnDel = document.createElement('button');
-      btnDel.className = 'btn danger';
+      btnDel.className = 'btn danger btnIconDel';
+      btnDel.type = 'button';
       btnDel.textContent = '🗑';
-      btnDel.style.padding = '2px 8px';
+      btnDel.title = 'Eliminar';
       btnDel.addEventListener('click', function(ev){
         ev.stopPropagation();
         deleteEntry(e);
@@ -490,7 +485,12 @@
     }
   }
 
-  /* =================== EXPORT EXCEL GASTOS (PLANTILLA 2N, FECHA EN UNA CELDA) =================== */
+  /* =================== EXPORT EXCEL GASTOS (2N TEMPLATE) ===================
+     REQUISITO: archivos exportados en INGLÉS -> filename/hojas/columnas.
+     Nota: la plantilla 2N ya tiene cabeceras propias; aquí aseguramos:
+     - filename en inglés
+     - hoja final se mantiene como la de plantilla (no cambiamos estructura)
+  ========================================================================== */
   async function exportExcelGastos(){
     if (!currentEntries.length){
       alert('No hay gastos en este mes.');
@@ -499,6 +499,7 @@
 
     try{
       setStatus('Generando Excel de gastos…');
+
       const resp = await fetch('assets/plantilla-2n.xlsx');
       if (!resp.ok){
         throw new Error('No se puede cargar "plantilla-2n.xlsx" (HTTP ' + resp.status + ')');
@@ -509,27 +510,25 @@
       const sheetName = wb.SheetNames[0];
       const ws = wb.Sheets[sheetName];
 
-      // Cabecera fiel a la plantilla:
-      // Row2: A2 = "NOM", B2 = valor
-      // Row3: A3 = "PRENOM:", B3 = valor
-      //       C3 = "COST CENTER:", D3 = valor
       function setHeaderCell(ref, val){
         if (!ws[ref]) ws[ref] = {};
         ws[ref].v = val;
         ws[ref].t = 's';
       }
-      setHeaderCell('B2', NOM);          // NOM
-      setHeaderCell('B3', PRENOM);       // PRENOM
-      setHeaderCell('D3', COST_CENTER);  // COST CENTER
 
-      // Rellenamos desde la fila 7 (como pide la plantilla 2N)
+      // Mantiene mapeo de tu plantilla
+      setHeaderCell('B2', NOM);
+      setHeaderCell('B3', PRENOM);
+      setHeaderCell('D3', COST_CENTER);
+
       const startRow = 7;
 
       currentEntries.forEach((e, idx)=>{
         const r = startRow + idx;
         const d = e.dateJs instanceof Date ? e.dateJs : new Date(e.dateJs || e.date);
         const iso = d.toISOString().slice(0,10); // YYYY-MM-DD
-        const [yyyy,mm,dd] = iso.split('-');
+        const parts = iso.split('-');
+        const yyyy = parts[0], mm = parts[1], dd = parts[2];
 
         function setCell(col, val, typeOverride){
           const cellRef = col + String(r);
@@ -542,55 +541,38 @@
           }
         }
 
-        // FECHA en UNA sola celda (columna A, cabecera "DATE")
-        const fechaTexto = dd + '/' + mm + '/' + yyyy;
-        setCell('A', fechaTexto);  // una sola celda para la fecha
+        // Date in one cell (A) dd/mm/yyyy
+        const dateText = dd + '/' + mm + '/' + yyyy;
+        setCell('A', dateText);
 
-        // CLIENT / PROVIDER en columna B
-        setCell('B', e.provider || '');
-
-        // Concepto: añadimos notas al lado del proveedor (si las hay)
+        // Provider/Client in B (append notes)
+        let bVal = (e.provider || '');
         if (e.notes){
-          const current = (e.provider || '').trim();
-          const combined = current
-            ? (current + ' - ' + e.notes)
-            : e.notes;
-          setCell('B', combined);
+          const base = (e.provider || '').trim();
+          bVal = base ? (base + ' - ' + e.notes) : e.notes;
         }
+        setCell('B', bVal);
 
-        // Importe según categoría, intentando respetar cabeceras:
-        // C = TOLLS & PARKINGS
-        // D = HOTEL
-        // E = GASOLINE
-        // G = OTHER TRANSPORTS (Taxi)
-        // I = MEALS (TRAVELING)
-        // J = VARIOUS
+        // Amount by category (template columns)
         const amount = Number(e.amount || 0);
         const cat = (e.category || '').toLowerCase();
-        let colAmount = 'J'; // por defecto, VARIOUS
 
-        if (cat === 'peajes') {
-          colAmount = 'C';
-        } else if (cat === 'alojamiento') {
-          colAmount = 'D';
-        } else if (cat === 'gasolina') {
-          colAmount = 'E';
-        } else if (cat === 'transporte') {
-          colAmount = 'G';
-        } else if (cat === 'comida') {
-          colAmount = 'I';
-        } else {
-          colAmount = 'J';
-        }
+        let colAmount = 'J'; // VARIOUS default
+        if (cat === 'peajes') colAmount = 'C';
+        else if (cat === 'alojamiento') colAmount = 'D';
+        else if (cat === 'gasolina') colAmount = 'E';
+        else if (cat === 'transporte') colAmount = 'G';
+        else if (cat === 'comida') colAmount = 'I';
+        else colAmount = 'J';
 
-        setCell(colAmount, amount);  // importe en la columna de su categoría
-        setCell('K', amount);        // TOTAL de la línea (columna K)
+        setCell(colAmount, amount);
+        setCell('K', amount); // line total
       });
 
       const month = $('monthInput').value || '';
-      const filename = 'gastos-2n-' + (month || 'mes') + '.xlsx';
-
+      const filename = 'expenses-2n-' + (month || 'month') + '.xlsx'; // ENGLISH
       XLSX.writeFile(wb, filename);
+
       setStatus('Excel de gastos generado ✅');
     }catch(e){
       console.error(e);
@@ -599,7 +581,7 @@
     }
   }
 
-  /* =================== EXPORT EXCEL KM PERSONALES =================== */
+  /* =================== EXPORT EXCEL PERSONAL MILEAGE (ENGLISH) =================== */
   async function exportExcelKmPersonal(){
     const kmsPer = currentKms.filter(k =>
       (k.type || '').toLowerCase().includes('per')
@@ -614,7 +596,8 @@
 
       const rows = kmsPer.map(k=>{
         const d = k.dateJs instanceof Date ? k.dateJs : new Date(k.dateJs || k.date);
-        const fecha = d.toISOString().slice(0,10);
+        const dateISO = d.toISOString().slice(0,10);
+
         const km = Number(k.km || k.distance || 0) || 0;
         const fuel = (k.fuelPrice != null && k.fuelPrice !== '')
           ? Number(k.fuelPrice)
@@ -624,19 +607,20 @@
           : 0;
 
         return {
-          Fecha: fecha,
+          Date: dateISO,
           KM: km,
-          '€/L': (!isNaN(fuel) && fuel > 0) ? fuel : '',
-          'Coste km pers. (km×€/L×6/100)': cost
+          "€/L": (!isNaN(fuel) && fuel > 0) ? fuel : "",
+          "Personal mileage cost (km×€/L×6/100)": cost
         };
       });
 
       const ws = XLSX.utils.json_to_sheet(rows);
       const wb = XLSX.utils.book_new();
-      XLSX.utils.book_append_sheet(wb, ws, 'KM_personales');
+      XLSX.utils.book_append_sheet(wb, ws, 'Personal_Mileage');
 
       const month = $('monthInput').value || '';
-      XLSX.writeFile(wb, 'km-personales-' + (month || 'mes') + '.xlsx');
+      XLSX.writeFile(wb, 'personal-mileage-' + (month || 'month') + '.xlsx'); // ENGLISH
+
       setStatus('Excel de KM personales generado ✅');
     }catch(e){
       console.error(e);
@@ -645,7 +629,7 @@
     }
   }
 
-  /* =================== DESCARGAR FOTOS TICKETS (SIN ZIP) =================== */
+  /* =================== DOWNLOAD TICKET PHOTOS (ENGLISH FILE NAMES) =================== */
   async function exportFotosTickets(){
     const entriesWithPhoto = currentEntries.filter(e => e.photoURL);
     if (!entriesWithPhoto.length){
@@ -659,10 +643,12 @@
       entriesWithPhoto.forEach((e, i)=>{
         const url = e.photoURL;
         if (!url) return;
+
         const d = e.dateJs instanceof Date ? e.dateJs : new Date(e.dateJs || e.date);
         const iso = d.toISOString().slice(0,10);
+
         const safeProv = (e.provider || 'ticket').replace(/[^a-z0-9-_]/gi,'_').toLowerCase();
-        const fname = iso + '_' + safeProv + '_' + i + '.jpg';
+        const fname = 'ticket_' + iso + '_' + safeProv + '_' + i + '.jpg'; // ENGLISH-ish
 
         const a = document.createElement('a');
         a.href = url;
