--- a/kms.html
+++ b/kms.html
@@ -17,38 +17,87 @@
   <script src="config.js"></script>
 
   <style>
-    .km-row {
+    /* Solo estética específica KM (sin tocar lógica) */
+
+    /* Sustituye el fondo oscuro por card style (Lightning) */
+    .km-row{
       display:flex;
       justify-content:space-between;
       align-items:flex-start;
-      padding:6px 8px;
-      border-radius:8px;
-      margin-bottom:4px;
-      background:rgba(0,0,0,0.1);
+      gap:10px;
+      padding:10px 12px;
+      border-radius:12px;
+      border: 1px solid rgba(208, 213, 229, 0.9);
+      background: var(--bg-card-soft);
+      margin-bottom:8px;
+      transition: box-shadow .15s ease;
     }
-    .km-row-main {
+    .km-row:hover{
+      box-shadow: 0 4px 14px rgba(15, 23, 42, 0.10);
+    }
+
+    .km-row-main{
       display:flex;
       flex-direction:column;
       gap:2px;
+      min-width:0;
+    }
+    .km-row-main strong{
+      font-size:13px;
+      font-weight: 750;
+      color: var(--text-main);
+    }
+    .km-row-meta{
       font-size:12px;
-    }
-    .km-row-main strong {
-      font-size:12px;
-    }
-    .km-row-meta {
-      font-size:11px;
-      opacity:0.8;
-    }
-    .km-row button {
+      color: var(--text-muted);
+      overflow:hidden;
+      text-overflow:ellipsis;
       white-space:nowrap;
+    }
+
+    /* Botón icono borrar, más grande en móvil */
+    .btnIconDel{
+      min-height:34px;
+      padding:6px 10px;
+      border-radius:14px;
+      font-weight:800;
+      white-space:nowrap;
+    }
+
+    /* Mejor layout del formulario */
+    .form-grid{
+      display:flex;
+      flex-wrap:wrap;
+      gap:10px;
+      align-items:flex-end;
+    }
+    .form-grid > div{
+      flex: 1 1 180px;
+      min-width: 160px;
+    }
+
+    @media (max-width:600px){
+      .form-grid > div{
+        flex: 1 1 100%;
+        min-width: 100%;
+      }
+      .btnIconDel{
+        min-height:44px;
+        font-size:16px;
+        padding:10px 14px;
+      }
+      #kmList{
+        max-height:none !important;
+        overflow: visible !important;
+      }
     }
   </style>
 </head>
-<body>
 
+<body>
 <header class="topbar">
   <h1>
-    <img src="assets/2n-logo-black.png" alt="2N" style="height:20px;border-radius:4px;">
+    <img src="assets/2n-logo-black.png" alt="2N" style="height:20px;border-radius:6px;">
     Gastos 2N · KM
   </h1>
 
@@ -71,16 +120,18 @@
     <div class="card">
       <h2>Nuevo registro de KM</h2>
 
-      <div class="row" style="flex-wrap:wrap;gap:10px">
+      <div class="form-grid">
         <div>
           <label>Fecha</label><br>
           <input id="kmDate" type="date">
         </div>
-        <div>
+
+        <div style="max-width:220px">
           <label>KM recorridos</label><br>
-          <input id="kmDistance" type="number" step="0.1" style="width:120px">
+          <input id="kmDistance" type="number" step="0.1">
         </div>
-        <div>
+
+        <div style="max-width:240px">
           <label>Tipo</label><br>
           <select id="kmType">
             <option value="empresa" selected>Empresa</option>
@@ -89,25 +140,26 @@
         </div>
       </div>
 
-      <div class="row" style="flex-wrap:wrap;gap:10px;margin-top:10px">
-        <div>
+      <div class="form-grid" style="margin-top:10px">
+        <div style="max-width:260px">
           <label>Precio combustible (€/L)</label><br>
-          <input id="kmFuelPrice" type="number" step="0.01" style="width:140px">
+          <input id="kmFuelPrice" type="number" step="0.01">
         </div>
-        <div>
+
+        <div style="max-width:260px">
           <label>KM totales coche (auto)</label><br>
-          <input id="kmOdometer" type="number" step="1" style="width:140px" readonly>
+          <input id="kmOdometer" type="number" step="1" readonly>
         </div>
       </div>
 
       <div style="margin-top:10px">
         <label>Notas</label><br>
-        <textarea id="kmNotes" rows="3" style="width:100%" placeholder="Trayecto, motivo, cliente, etc."></textarea>
+        <textarea id="kmNotes" rows="3" placeholder="Trayecto, motivo, cliente, etc."></textarea>
       </div>
 
-      <div class="row" style="margin-top:12px;gap:8px;flex-wrap:wrap">
-        <button id="btnSaveKm" class="btn primary">Guardar KM</button>
-        <button id="btnClearKm" class="btn">Limpiar formulario</button>
+      <div class="row" style="margin-top:12px;gap:10px;flex-wrap:wrap;align-items:center">
+        <button id="btnSaveKm" class="btn primary">💾 Guardar KM</button>
+        <button id="btnClearKm" class="btn">🧹 Limpiar</button>
         <span id="kmStatus" class="small" style="min-height:1.5em"></span>
       </div>
     </div>
@@ -115,9 +167,9 @@
     <!-- LISTA KM -->
     <div class="card">
       <h2>Registros de KM</h2>
-      <div id="kmList" class="list small" style="max-height:260px;overflow:auto;"></div>
-      <div class="small" style="margin-top:6px">
-        Se muestran los últimos 20 registros de KM. Puedes borrar cada línea con el botón 🗑.
+      <div id="kmList" class="list" style="max-height:320px;overflow:auto;"></div>
+      <div class="small" style="margin-top:8px">
+        Se muestran los últimos 20 registros. Puedes borrar cada línea con 🗑.
       </div>
     </div>
 
@@ -358,9 +410,10 @@
       if (parts.length) main.appendChild(meta);
 
       var btn = document.createElement('button');
-      btn.className = 'btn danger';
+      btn.className = 'btn danger btnIconDel';
+      btn.type = 'button';
       btn.textContent = '🗑';
-      btn.style.padding = '2px 8px';
+      btn.title = 'Eliminar';
       btn.addEventListener('click', function(ev){
         ev.stopPropagation();
         deleteKm(e);
@@ -398,7 +451,7 @@
       '<b>KM totales (últimos 20 registros):</b> ' + total.toFixed(1) + ' km<br>' +
       '<b>KM empresa:</b> ' + emp.toFixed(1) + ' km<br>' +
       '<b>KM personales:</b> ' + per.toFixed(1) + ' km<br>' +
-      '<span class="small" style="display:block;margin-top:4px;">' +
+      '<span class="small" style="display:block;margin-top:6px;">' +
       'Los datos se muestran según el usuario actual (Firebase o este dispositivo).' +
       '</span>';
   }
